--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="book">حجز</string>
     <string name="from">من</string>
     <string name="to">الي</string>
+    <string name="confermbook">تم الحجز بنجاح من فضلك احتفظ بكود التسجيل لتتمكن من الحضور</string>
+    <string name="testCode">1492-01-202181</string>
+
 </resources>
