--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="national_id_error">من فضلك ادخل الرقم القومي</string>
     <string name="birthday_error">من فضلك ادخل تاريخ الميلاد</string>
     <string name="data_error">من فضلك ادخل البيانات الصحيحة</string>
+    <string name="gender_error">من فضلك ادخل النوع</string>
 
     <string name="confermbook">تم الحجز بنجاح من فضلك احتفظ بكود التسجيل لتتمكن من الحضور</string>
     <string name="testCode">1492-01-202181</string>
