--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="data_error">من فضلك ادخل البيانات الصحيحة</string>
     <string name="gender_error">من فضلك ادخل النوع</string>
 
-    <string name="confermbook">تم الحجز بنجاح من فضلك احتفظ بكود التسجيل لتتمكن من الحضور</string>
+    <string name="confirm_book">تم الحجز بنجاح من فضلك احتفظ بكود التسجيل لتتمكن من الحضور</string>
     <string name="testCode">1492-01-202181</string>
     <string name="describeHymens">جميع تماجيد والحان العدرا</string>
     <string name="booking_aodas_describe">حجز جميع القداسات </string>
@@ -38,5 +38,9 @@
     <string name="aya">كل يوم آيه</string>
     <string name="aya_desc">صوت ربنا ليك</string>
     <string name="about_desc">عن البرنامج وحقوق الملكيه</string>
+    <string name="Code">كود الحجز</string>
+    <string name="delete">الغاء</string>
+    <string name="register_code">كود التسجيل</string>
+    <string name="image_confirmation_describtion">Image Confirmation</string>
 
 </resources>
